노트북 복사본
노트북에서 작업후 옮긴작업

--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -10,7 +10,7 @@
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:ems="10"
         android:hint="아이디"
         android:id="@+id/etId" />
@@ -34,7 +34,7 @@
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        android:inputType="text"
         android:ems="10"
         android:hint="이름"
         android:id="@+id/etName" />
@@ -42,10 +42,10 @@
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:ems="10"
-        android:hint="이메일"
-        android:id="@+id/etEmail" />
+        android:hint="닉네임"
+        android:id="@+id/etNickname" />
 
     <LinearLayout
         android:layout_width="300dp"
