--- a/app/src/main/res/layout/app_bar_test.xml
+++ b/app/src/main/res/layout/app_bar_test.xml
@@ -4,26 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    app:layout_scrollFlags="scroll|enterAlways"
     tools:context="com.example.star.myapplication.TestActivity">
 
-
-    <android.support.v7.widget.Toolbar
-        style="@style/SplashTheme"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/toolbar"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#1eab85"
-        android:minHeight="@dimen/abc_action_bar_default_height_material">
+        android:theme="@style/AppBarOverlay">
 
-        <ImageView
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.Toolbar
+
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/logo2"/>
+            android:background="#ffffff"
+            app:layout_collapseMode="pin"
+            app:layout_scrollFlags="enterAlways|scroll">
 
-    </android.support.v7.widget.Toolbar>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/logo2"/>
 
- <!--   <include layout="@layout/content_test" />-->
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/content_test" />
+
+
 
 </android.support.design.widget.CoordinatorLayout>
