리뷰액티비티 UI, 구글맵 API사용

--- a/app/src/main/res/layout/content.xml
+++ b/app/src/main/res/layout/content.xml
@@ -3,26 +3,36 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:layout_weight="1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/food7" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor mauris, lobortis in velit sed, elementum facilisis nibh. Integer suscipit mi in arcu consequat, sit amet ornare odio rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce sit amet porttitor risus. Aenean quis dignissim tellus. Nam at metus a ante condimentum malesuada id id nibh. Sed nec maximus felis, sit amet elementum nulla. Pellentesque tincidunt aliquet lacus in posuere. Suspendisse tempus viverra est at consectetur.
-
-Phasellus posuere lacus eget dapibus scelerisque. Etiam varius, tellus nec ultrices ultricies, orci metus convallis arcu, sit amet mattis ex velit vitae augue. Nunc id odio eget lectus sollicitudin efficitur. Praesent porttitor lacinia massa nec consectetur. Integer maximus ultricies eleifend. Mauris a venenatis ex. Vestibulum venenatis tortor lorem, in blandit turpis fringilla nec. Nunc tincidunt sem massa, ut tincidunt nisi porttitor sed. Vivamus lorem odio, condimentum a lectus quis, scelerisque condimentum lorem. Integer pretium mollis nisi, sit amet bibendum est luctus in. Curabitur eget orci orci. Sed blandit nunc nibh, id egestas mauris semper ut. Mauris cursus nibh nec bibendum tincidunt. Proin vehicula ultrices fermentum.
-
-Sed quis eros lectus. Quisque maximus molestie lacus, et venenatis diam vulputate non. Donec vel ante sit amet nunc egestas consequat id ultricies augue. Maecenas lacus dolor, tristique non magna vitae, eleifend suscipit nunc. Aliquam consequat diam sit amet orci viverra, vitae hendrerit leo molestie. Vestibulum sagittis neque tellus, ut fermentum justo imperdiet sit amet. Nullam ac maximus elit. Phasellus congue velit ut arcu blandit, nec tristique sem suscipit. Nam tempus dolor eu turpis cursus, eget laoreet lacus eleifend. Aenean id dui hendrerit, feugiat dolor faucibus, congue risus. Sed finibus fermentum mauris. Cras ante ante, tristique non viverra eget, euismod eget quam.
-
-Cras laoreet luctus ornare. Nam fermentum sodales commodo. Aliquam lacinia eleifend tristique. Proin egestas, urna sit amet bibendum volutpat, nunc dui ultrices lorem, quis finibus neque elit et mauris. Suspendisse potenti. Nullam vulputate pulvinar mi, vitae tincidunt justo tristique ullamcorper. Pellentesque sed ligula id est sagittis egestas. Integer convallis consectetur nisl et maximus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sagittis rhoncus nibh eu imperdiet.
-
-Sed ac quam accumsan, feugiat velit sed, suscipit dui. Sed dictum pulvinar mi vitae laoreet. Duis ullamcorper ipsum et libero faucibus, at semper augue vehicula. In felis ligula, cursus id consectetur nec, venenatis ac est. Nam hendrerit ornare neque sit amet tempus. Suspendisse ut congue nibh. Aliquam erat volutpat.
-
-Phasellus justo nulla, venenatis a vulputate ullamcorper, fringilla non elit. Maecenas fringilla venenatis tellus at tincidunt. Morbi pellentesque dapibus fringilla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris eu finibus ex. Morbi pellentesque eleifend rhoncus. Vestibulum varius bibendum mi id eleifend.
-
-Etiam at euismod urna, et dignissim velit. Aliquam augue turpis, pretium ac dignissim et, efficitur vitae quam. Maecenas ex diam, eleifend in lorem ut, feugiat sollicitudin magna. Sed id nisi turpis. Morbi sed euismod ipsum. Proin vestibulum sollicitudin purus, vitae semper neque congue a. Cras sit amet fringilla.
-
-Generated 7 paragraphs, 500 words, 3463 bytes of Lorem Ipsum"/>
+            android:textColor="#111111"
+            android:text="H. G. 웰스부터 에드거 라이스 버로스, 레이 브래드버리, 필립 K. 딕 등에 이르기까지 미지의 행성
+            ‘화성’은 수많은 작가들에게 상상력의 원천이자 영감이 되어왔다. 그리고 오늘날 다시 한 번 화성에서 조난당한
+            한 남자에 대한 이야기로 전 세계적인 열풍을 일으키고 있는 작품이 있으니, 바로 이 책
+            《마션-어느 괴짜 과학자의 화성판 어드벤처 생존기》이다. 컴퓨터 프로그래머 출신인 작가 앤디
+            위어가 2009년 취미 삼아 개인 블로그에 연재를 시작했던 《마션》은 독자들의 요청으로 2011년
+            아마존 킨들 버전으로 자비 출판되었고, 이후 한 문학 에이전트의 눈에 띄어 미국의 중견 출판사
+            크라운 사에서 정식 출판되었다. “지난 수십 년을 통틀어 이토록 잘 읽히는 소설은 처음이다”,
+            “21세기 과학적 지식이 빛을 발하는 스릴 넘치고 흥미진진한 이야기”라는 언론의 호평이 쏟아졌던
+            《마션》은 출간 즉시 뉴욕타임스 소설 부문 베스트셀러 순위권에 12주 연속 머물렀고, 1년도 채 안 된
+            오늘날 뉴욕타임스 소설 부문 베스트셀러 상위권에 37주 연속 재진입하고 있어 화제가 되고 있다. " />
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
