--- a/app/src/main/res/layout/sample.xml
+++ b/app/src/main/res/layout/sample.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="0dp"
-            android:background="@color/colorPrimaryDark"
+            android:background="#6cc6ad"
             app:tabIndicatorColor="#ffffff"
             app:tabIndicatorHeight="1.5dp"
             />
