--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2dc29a"
+    android:background="#6cc6ad"
     android:gravity="center">
 
     <EditText
@@ -59,7 +59,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
         app:srcCompat="@drawable/splash" />
