--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6"
+        android:layout_weight="5.5"
         android:background="#ffffff"
         android:orientation="vertical">
 
@@ -84,7 +84,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.7"
+        android:layout_weight="0.8"
         android:background="#ffffff"
         android:orientation="horizontal">
         <LinearLayout
@@ -108,14 +108,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="right"
-            android:paddingRight="7dp">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:src="@drawable/notice"
-                android:id="@+id/notice"/>
-        </LinearLayout>
+            android:paddingRight="7dp"></LinearLayout>
 
     </LinearLayout>
 
