--- a/app/src/main/res/menu/activity_test_drawer.xml
+++ b/app/src/main/res/menu/activity_test_drawer.xml
@@ -4,19 +4,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/home"
             android:title="홈" />
         <item
             android:id="@+id/nav_wishlist"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/star"
             android:title="즐겨찾기" />
         <item
             android:id="@+id/nav_notify"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/profile"
             android:title="회원정보 수정" />
         <item
             android:id="@+id/nav_logout"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/logout"
             android:title="로그아웃" />
     </group>
 
