--- a/app/src/main/res/layout/fragment_gps.xml
+++ b/app/src/main/res/layout/fragment_gps.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="#000000">
 
     <com.google.android.gms.maps.MapView
@@ -9,23 +9,41 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:name="com.google.android.gms.maps.MapFragment"
-        />
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    >
+
+    <EditText
+        android:layout_width="307dp"
+        android:layout_height="37dp"
+        android:hint="Search"
+        android:id="@+id/TFaddress"
+        android:background="#111111"/>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="검색" />
+</LinearLayout>
+    <!--<android.support.v7.widget.CardView
         android:name="@+id/card_view"
         android:layout_width="400dp"
         android:layout_height="40dp"
-        android:layout_gravity="center"
-        card_view:cardCornerRadius="4dp"
-        >
+        android:layout_gravity="center">
         <fragment
             android:id="@+id/place_autocomplete_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
-            >
-        </fragment>
+            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>
 
-    </android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>-->
 
 </RelativeLayout>
