현재위치버튼, 스크롤뷰..
현재위치 버튼 추가
스크롤 뷰 안내려가던 현상 해결
지도 위 아래로 이동가능

--- a/app/src/main/res/layout/app_bar_test.xml
+++ b/app/src/main/res/layout/app_bar_test.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:background="#ffffff"
             app:layout_collapseMode="pin"
-            app:layout_scrollFlags="enterAlways|scroll">
+            app:layout_scrollFlags="enterAlways">
 
             <ImageView
                 android:layout_width="wrap_content"
