--- a/app/src/main/res/layout/content_test.xml
+++ b/app/src/main/res/layout/content_test.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    app:layout_scrollFlags="scroll|enterAlways"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.star.myapplication.TestActivity"
     tools:showIn="@layout/app_bar_test">
 
     <FrameLayout
+        android:id="@+id/content_test"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/content_test">
-    </FrameLayout>
+        android:layout_height="match_parent"></FrameLayout>
 
-</android.support.v4.widget.NestedScrollView>
+</FrameLayout>
