--- a/app/src/main/res/layout/fragment_gps.xml
+++ b/app/src/main/res/layout/fragment_gps.xml
@@ -9,13 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:name="com.google.android.gms.maps.MapFragment"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/linearLayout" />
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    >
+
+    android:id="@+id/linearLayout">
 
     <EditText
         android:layout_width="307dp"
@@ -27,12 +28,13 @@
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="41dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:text="검색" />
 </LinearLayout>
+
     <!--<android.support.v7.widget.CardView
         android:name="@+id/card_view"
         android:layout_width="400dp"
