로그인 연동 시도중

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,4 +63,12 @@
         android:cropToPadding="false"
         app:srcCompat="@drawable/splash" />
 
+    <ListView
+        android:id="@+id/txtList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ff99ccee"
+        android:textColor="#ff0000ff"
+        android:textSize="12dp"></ListView>
+
 </RelativeLayout>
