--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -95,6 +95,15 @@
             android:layout_toRightOf="@+id/btnCancel"
             android:layout_toEndOf="@+id/btnCancel" />
 
+        <ListView
+            android:id="@+id/txtList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ff99ccee"
+            android:textColor="#ff0000ff"
+            android:textSize="12dp"
+            android:visibility="gone"></ListView>
+
     </RelativeLayout>
 
 </LinearLayout>
