--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,7 @@
         android:layout_height="wrap_content"
         android:background="#ff99ccee"
         android:textColor="#ff0000ff"
-        android:textSize="12dp"></ListView>
+        android:textSize="12dp"
+        android:visibility="gone"></ListView>
 
 </RelativeLayout>
