--- a/app/src/main/res/layout/nav_header_test.xml
+++ b/app/src/main/res/layout/nav_header_test.xml
@@ -31,6 +31,7 @@
         android:layout_weight="0.33" />
 
     <TextView
+        android:id="@+id/profile2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
