--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,4 +72,12 @@
         android:textSize="12dp"
         android:visibility="gone"></ListView>
 
+    <ListView
+        android:id="@+id/storelist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ff99ccee"
+        android:textColor="#ff0000ff"
+        android:textSize="12dp"
+        android:visibility="gone"></ListView>
 </RelativeLayout>
