--- a/app/src/main/res/layout/infoview.xml
+++ b/app/src/main/res/layout/infoview.xml
@@ -5,11 +5,13 @@
     android:layout_height="wrap_content"
     android:background="#ffffff"
     android:weightSum="1">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fillViewport="true"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:fillViewport="true">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,13 +74,20 @@
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
-                    android:layout_height="75dp"
+                    android:layout_height="83dp"
                     android:paddingLeft="9dp"
                     android:paddingRight="9dp"
                     android:paddingTop="5dp"
-                    android:text="대학분식은 20년전통의 집밥스타일을 고집하는 한성대학교 맛집 입니다. 아직까지도 인기가 많습니다."
+                    android:text="바비레드는 12,000~18,000의 가격으로 선 결제로 음식을 받을 수 있습니다. 여기서 특이한 건 매운 맛을 조절할 수 있다는 점이 특이하고, 지하에 위치한 곳이라 생각하기에 아늑하게 느껴집니다."
                     android:textColor="#111111"
                     android:textSize="15dp" />
+
+                <Button
+                    android:id="@+id/callbtn"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/call" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
