--- a/app/src/main/res/layout/app_bar_detail.xml
+++ b/app/src/main/res/layout/app_bar_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     app:layout_scrollFlags="scroll|enterAlways"
-    tools:context="com.example.star.myapplication.TestActivity">
+    tools:context="com.example.star.myapplication.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
