--- a/app/src/main/res/layout/infoview.xml
+++ b/app/src/main/res/layout/infoview.xml
@@ -68,35 +68,38 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:weightSum="1">
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/infodes"
                     android:layout_width="wrap_content"
-                    android:layout_height="83dp"
+                    android:layout_height="fill_parent"
                     android:paddingLeft="9dp"
                     android:paddingRight="9dp"
                     android:paddingTop="5dp"
                     android:text="바비레드는 12,000~18,000의 가격으로 선 결제로 음식을 받을 수 있습니다. 여기서 특이한 건 매운 맛을 조절할 수 있다는 점이 특이하고, 지하에 위치한 곳이라 생각하기에 아늑하게 느껴집니다."
                     android:textColor="#111111"
                     android:textSize="15dp" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                <Button
-                    android:id="@+id/callbtn"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/call" />
-                <Button
-                    android:id="@+id/sharebtn"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/share" />
+                    android:orientation="horizontal"
+                    android:layout_marginTop="15dp">
+
+                    <Button
+                        android:id="@+id/callbtn"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/call" />
+
+                    <Button
+                        android:id="@+id/sharebtn"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/share"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
