db수정후 description 다시넣음

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -160,7 +160,7 @@
             android:paddingRight="30dp">
 
             <ImageView
-                android:id="@+id/imgsearch"
+                android:id="@+id/sdsdsad"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/search" />
