리뷰 액티비티 프래그먼트 UI 구성

--- a/app/src/main/res/layout/adapter_store.xml
+++ b/app/src/main/res/layout/adapter_store.xml
@@ -6,12 +6,14 @@
 
     <ImageView
         android:id="@+id/ivPosterImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="60dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:maxHeight="70dp"
-        android:scaleType="fitXY"
         android:adjustViewBounds="true"
+        android:maxHeight="70dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/food7" />
 
     <RelativeLayout
@@ -90,6 +92,17 @@
             android:visibility="gone" />
         <TextView
             android:id="@+id/stdescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/stkind"
+            android:ellipsize="end"
+            android:hint="Christian Bale, Joseph-Gordon Levitt, Heath Ledger, Maggie Gylenhall"
+            android:maxLines="1"
+            android:textColor="#111111"
+            android:textSize="12sp"
+            android:visibility="gone" />
+        <TextView
+            android:id="@+id/stimages"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/stkind"
