--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -18,8 +18,9 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="294dp"
+                android:id="@+id/background"
                 android:background="@drawable/food6"
                 android:orientation="vertical">
 
@@ -100,11 +101,6 @@
                     android:layout_height="60dp"
                     android:layout_gravity="center"
                     android:background="@drawable/share"/>
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/testimage"
-                        android:src="@drawable/food7"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
