--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/camera"
+        android:icon="@drawable/camera"
+        android:title="사진"
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/post"
+        android:title="게시"
+        app:showAsAction="always"/>
 </menu>
