화질문제 해결
갤러리 제외

--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -8,11 +8,20 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <EditText
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:inputType="textMultiLine|textLongMessage|textWebEditText"
+        android:backgroundTint="#6cc6ad"/>
+
     <ImageView
         android:id="@+id/uploadimage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY" />
+        android:layout_weight="1" />
 
 </LinearLayout>
 
