--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -21,7 +21,8 @@
         android:id="@+id/uploadimage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:scaleType="centerInside" />
 
 </LinearLayout>
 
