--- a/app/src/main/res/layout/content.xml
+++ b/app/src/main/res/layout/content.xml
@@ -29,7 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     android:layout_weight="1"
-                    android:scaleType="fitXY"
+                    android:scaleType="centerInside"
                     android:src="@drawable/food2" />
 
                 <ImageView
