--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -5,8 +5,21 @@
     android:layout_height="match_parent">
     <ScrollView
         android:layout_weight="1"
+        android:fillViewport="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+            <ListView
+                android:id="@+id/reviewlist"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#f2f2f2"
+                android:textColor="#ff0000ff"
+                android:textSize="12dp"></ListView>
+        </LinearLayout>
     </ScrollView>
     <Button
         android:id="@+id/btnwrite"
@@ -15,6 +28,7 @@
         android:textSize="17dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
 </LinearLayout>
 
 
