--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <EditText
+        android:id="@+id/reviewtext"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_width="match_parent"
