--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -8,22 +8,46 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/reviewtext"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:inputType="textMultiLine|textLongMessage|textWebEditText"
-        android:backgroundTint="#6cc6ad"/>
+        android:orientation="vertical"
+        android:layout_weight="4">
 
-    <ImageView
-        android:id="@+id/uploadimage"
+        <EditText
+            android:id="@+id/reviewtext2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_weight="7"
+            android:backgroundTint="#6cc6ad"
+            android:hint="Grade 1 ~ 5" />
+
+        <EditText
+            android:id="@+id/reviewtext"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_weight="2"
+            android:backgroundTint="#6cc6ad"
+            android:hint="Content"
+            android:inputType="textMultiLine|textLongMessage|textWebEditText" />
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:scaleType="centerInside" />
+        android:orientation="vertical"
+        android:layout_weight="5">
+
+        <ImageView
+            android:id="@+id/uploadimage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:scaleType="centerInside" />
+    </LinearLayout>
 
 </LinearLayout>
 
